# SoftEther-Android-Module

./: .gitignore  .gitmodules  IMPLEMENTATION_PLAN.md  README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
src/androidTest/java/vn/unlimit/softether/test/: NativeConnectionTest.kt  ServerAvailabilityChecker.kt  TestConfig.kt  TestResultReporter.kt  VpngateServerProvider.kt
src/androidTest/java/vn/unlimit/softether/test/model/: NativeTestResult.kt
src/androidTest/java/vn/unlimit/softetherclient/: SoftEtherNativeInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  android_iconv_shim.c  android_iconv_shim.h  android_mayaqua_patch.c  android_mayaqua_patch.h  android_readline_shim.c  android_readline_shim.h  build-all.sh  build-libsodium.sh  build-openssl-android.sh  build-openssl.sh  jni_stub.c  softether_jni.c
src/main/cpp/jni/: softether_jni.c  softether_jni.h
src/main/cpp/openssl-build/arm64-v8a/include/openssl/: configuration.h  crmf.h  pkcs12.h  x509.h  x509_vfy.h  x509v3.h
src/main/cpp/openssl-build/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/main/cpp/openssl-build/armeabi-v7a/include/openssl/: bio.h  configuration.h  crypto.h  ocsp.h  srp.h  ssl.h  ui.h
src/main/cpp/openssl-build/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/main/cpp/openssl-build/x86/include/openssl/: asn1.h  asn1t.h  cms.h  configuration.h  pkcs7.h  safestack.h  x509_acert.h
src/main/cpp/openssl-build/x86/lib/cmake/OpenSSL/: OpenSSLConfig.cmake
src/main/cpp/openssl-build/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/main/cpp/openssl-build/x86_64/include/openssl/: cmp.h  conf.h  configuration.h  core_names.h  ct.h  ess.h
src/main/cpp/openssl-build/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/main/cpp/softether-core/include/: softether_crypto.h  softether_protocol.h  softether_socket.h
src/main/cpp/softether-core/src/crypto/: aes_wrapper.c
src/main/cpp/softether-core/src/packet/: packet_handler.c  serializer.c
src/main/cpp/softether-core/src/proto/: softether_protocol.c
src/main/cpp/softether-core/src/socket/: tcp_socket.c
src/main/cpp/softether-native/: softether_jni_bridge.c  softether_protocol.c  softether_protocol.h
src/main/cpp/stubs/: Bridge_stub.c  Encrypt_stub.c  EtherLog_stub.c  FileIO_stub.c  Hamcore.h  Kernel_stub.c  NativeStack_stub.c  Virtual_stub.c  cpu_features_macros.h  cpuinfo_aarch64.h  cpuinfo_arm.h  cpuinfo_x86.h  stubs.h
src/main/cpp/test/: native_test.c  native_test.h  test_jni_bridge.c
src/main/java/vn/unlimit/softether/: SoftEtherVpnService.kt
src/main/java/vn/unlimit/softether/client/: SoftEtherClient.kt
src/main/java/vn/unlimit/softether/client/auth/: AuthManager.kt
src/main/java/vn/unlimit/softether/client/protocol/: HandshakeManager.kt  KeepAliveManager.kt  PacketHandler.kt
src/main/java/vn/unlimit/softether/controller/: ConnectionController.kt
src/main/java/vn/unlimit/softether/model/: ConnectionConfig.kt  Exceptions.kt  SessionState.kt
src/main/java/vn/unlimit/softether/terminal/: SSLTerminal.kt  TunTerminal.kt
src/main/java/vn/unlimit/softether/util/: ByteBufferUtil.kt  CryptoUtil.kt
src/main/java/vn/unlimit/softetherclient/: SoftEtherClient.kt  SoftEtherNative.kt  SoftEtherVpnService.kt
src/test/java/vn/unlimit/softetherclient/: README.md  SoftEtherNativeTestConnectTest.kt  SoftEtherNativeUnitTest.kt
